# nerf-light

./: .gitignore  65MM MG996R Arm v1.stl  README.md  Undercity.csv  makefile  pyproject.toml
schematics/: #auto_saved_files#  _autosave-nerf-light.kicad_sch  fp-lib-table  nerf-light.kicad_pcb  nerf-light.kicad_prl  nerf-light.kicad_pro  nerf-light.kicad_sch  sym-lib-table  ~nerf-light.kicad_sch.lck
src/nerf-light/: __init__.py  __main__.py  camera.py  camera_util.py  game.py  stepper_util.py  weapon.py
tmp/: camtest.py  servotest.py  steppertest.py
